--- a/.github/workflows/build_static_lib.yml
+++ b/.github/workflows/build_static_lib.yml
@@ -10,13 +10,13 @@ jobs:
     strategy:
       matrix:
         include:
-          - build: x86_64-linux
+          - build: linux-x86_64
             os: ubuntu-latest
             rust: stable
-          - build: x86_64-macos
+          - build: macos-x86_64
             os: macos-latest
             rust: stable
-          - build: x86_64-mingw
+          - build: windows-x86_64
             os: windows-latest
             target: x86_64-pc-windows-gnu
             rust: stable
@@ -24,11 +24,9 @@ jobs:
       - uses: actions/checkout@v2
         with:
           repository: "cloudflare/lol-html"
-      - uses: bytecodealliance/wasmtime/.github/actions/install-rust
+      - uses: bytecodealliance/wasmtime/.github/actions/install-rust@main
         with:
           toolchain: ${{ matrix.rust }}
-      - uses: bytecodealliance/wasmtime/.github/actions/binary-compatible-builds
-        if: matrix.target == ''
 
       - name: Configure Cargo target
         run: |
@@ -37,51 +35,24 @@ jobs:
         if: matrix.target != ''
 
       - run: cargo build --release --manifest-path c-api/Cargo.toml
-
+        if: matrix.os != 'windows-latest'
+      - run: cargo build --release --target ${{ matrix.target }} --manifest-path c-api/Cargo.toml
+        if: matrix.os == 'windows-latest'
+      
       - run: mkdir dist
 
-      - run: cp target/release/liblolhtml.a dist
-        if: matrix.os == 'ubuntu-latest' && matrix.target == ''
-      - run: cp target/release/liblolhtml.a dist
-        if: matrix.os == 'macos-latest'
-      - run: cp target/x86_64-pc-windows-gnu/release/liblolhtml.a dist
-        if: matrix.build == 'x86_64-mingw'
+      - run: cp c-api/target/release/liblolhtml.a dist
+        if: matrix.os != 'windows-latest'
+      - run: cp c-api/target/${{ matrix.target }}/release/liblolhtml.a dist
+        if: matrix.build == 'windows-x86_64'
 
       - uses: actions/upload-artifact@v2
         with:
-          name: bins-${{ matrix.build }}
+          name: ${{ matrix.build }}
           path: dist
 
-  publish:
-    name: publish
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Download x86_64 Linux binaries
-        uses: actions/download-artifact@v2
+      - uses: actions/upload-artifact@v2
         with:
-          name: bins-x86_64-linux
-          path: linux-x86_64
-      - name: Download x86_64 macOS binaries
-        uses: actions/download-artifact@v2
-        with:
-          name: bins-x86_64-macos
-          path: macos-x86_64
-      - name: Download x86_64 Windows MinGW binaries
-        uses: actions/download-artifact@v2
-        with:
-          name: bins-x86_64-mingw
-          path: windows-x86_64
-
-      - run: mv linux-x86_64 macos-x86_64 windows-x86_64 build
-
-      - name: Commit files
-        run: |
-          git config --local user.email "coolspring888@gmail.com"
-          git config --local user.name "CoolSpring8"
-          git commit -m "build: bump liblolhtml version" -a
-
-      - name: Push changes
-        uses: ad-m/github-push-action@master
+          name: include
+          path: c-api/include
+        if: matrix.os == 'ubuntu-latest'
