ci: upload reports to codecov

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -35,3 +35,6 @@ jobs:
 
       - name: Test
         run: go test -v .
+
+      - name: Upload reports to Codecov
+        run: bash <(curl -s https://codecov.io/bash)
