--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -34,7 +34,7 @@ jobs:
         run: go build -v .
 
       - name: Test
-        run: go test -v .
+        run: go test -v . -race -coverprofile coverage.txt --covermode atomic
 
       - name: Upload reports to Codecov
         run: bash <(curl -s https://codecov.io/bash)
